# verba

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  TODO.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/pages/edit/: CMakeLists.txt  editpage.cpp  editpage.h  editpage.ui
src/pages/home/: CMakeLists.txt  homepage.cpp  homepage.h  homepage.ui
src/pages/settings/: CMakeLists.txt  settingspage.cpp  settingspage.h  settingspage.ui
